<resources>
    <string name="app_name">MelloFood</string>
    <string name="skip">Skip</string>
    <string name="userName">Username</string>
    <string name="email">Enter email address or Mobile no.</string>
    <string name="password">Password</string>
    <string name="passwordEd">Enter Password</string>
    <string name="forgotThis">Forgot this ?</string>
    <string name="signUp">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="or">OR</string>
    <string name="loginWithFacebook">LOGIN WITH FACEBOOK</string>
    <string name="checkBox">I would like to receive promotional emails from Mello</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="returnTologin">Return to Login</string>
    <string name="myAccount">My Account</string>
    <string name="outlets">Outlets</string>
    <string name="order">Order</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="promotions">Promotions</string>
    <string name="help">Help</string>
    <string name="contactUs">Contact Us</string>
    <string name="aboutUs">About Us</string>
    <string name="logout">Logout</string>
    <string name="termsAndConditons">Terms And Conditons</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="mallStallTitle">Mall Stall Title</string>
    <string name="newBtn">New</string>
    <string name="productName">Product Name</string>
    <string name="productDescription">Product Description</string>
    <string name="toobarTitle">Toobar Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewcart">View Cart</string>
    <string name="cheese">Cheese</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="bread">Bread</string>
    <string name="garlic">Garlic</string>
    <string name="jain">Jain</string>
    <string name="total">Total</string>
    <string name="addToOrder">Add To Order</string>
    <string name="mallName">Mall Name</string>
    <string name="qty">Qty</string>
    <string name="orderTotal">Order Total :</string>
    <string name="enterPromoCode">Enter Promo Code</string>
    <string name="apply">Apply</string>
    <string name="addMoreItems"><u>Add More Items</u></string>
    <string name="pay">Pay :</string>
    <string name="PayWithDbs">Pay with DBS</string>
    <string name="PayWithposb">Pay With POSB</string>
    <string name="orderDetails">Please collect your order within 30 minutes of estimated collection time. Any orders not collected by then shall be for feited.</string>
    <string name="checkOut">Check Out</string>
</resources>
