<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MyAccount"
            android:icon="@drawable/ic_profile_info"
            android:title="@string/myAccount" />
        <item
            android:id="@+id/outlets"
            android:icon="@drawable/ic_outlet"
            android:title="@string/outlets" />
        <item
            android:id="@+id/order"
            android:icon="@drawable/ic_order_info"
            android:title="@string/order" />
        <item
            android:id="@+id/payment"
            android:icon="@drawable/ic_my_card"
            android:title="@string/paymentMethods" />

        <item
            android:id="@+id/promotion"
            android:icon="@drawable/icn_promotion"
            android:title="@string/promotions" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/contactus"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contactUs" />
        <item
            android:id="@+id/privacyPolicy"
            android:icon="@drawable/ic_my_card"
            android:title="@string/privacyPolicy" />
        <item
            android:id="@+id/terms"
            android:icon="@drawable/ic_terms_conditions"
            android:title="@string/termsAndConditons" />
        <item
            android:id="@+id/aboutus"
            android:icon="@drawable/ic_about_us"
            android:title="@string/aboutUs" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>