<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:background="@drawable/login_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_alignParentEnd="true"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/colorWhite"/>

    <ImageView
        android:id="@+id/activity_login_appIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/launcher"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/activity_login_loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/logindetailsbg">
        <TextView
            android:id="@+id/activity_login_userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/userName"
            android:textSize="17dp"
            android:textColor="@color/colorWhite" />
        <EditText
            android:id="@+id/activity_login_emailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/activity_login_passwordTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="17dp"
                android:textColor="@color/colorWhite"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/passwordhide"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordEd"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotThis"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="11dp"
                android:textColor="@color/colorlightBlue"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_login_btnLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/activity_login_loginLinearLayout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/signUp"
            android:background="@drawable/left_corner_roundedbtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:background="@drawable/right_corner_roundedbtn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_login_viewLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/activity_login_btnLinearLayout"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="17dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorWhite"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_login_facebookBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/loginWithFacebook"
        android:background="@drawable/facebookbtn_rounded_corner"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/activity_login_viewLinearLayout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:shadowColor="@android:color/holo_orange_light"
        android:theme="@style/MyCheckBox"/>

</RelativeLayout>