<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity"
    android:background="@drawable/login_bg">

    <ImageView
        android:id="@+id/activity_signup_appIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/launcher"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/activity_signup_signupLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_signup_appIcon"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/logindetailsbg">
        <TextView
            android:id="@+id/activity_signup_userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/userName"
            android:inputType="textPersonName"
            android:textSize="17dp"
            android:textColor="@color/colorWhite" />
        <EditText
            android:id="@+id/activity_signup_emailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="13sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/activity_signup_passwordTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="17dp"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/activity_signup_passwordEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordEd"
                android:textSize="13sp"
                android:inputType="textPassword"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/activity_signup_confirmPasswordTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmpassword"
                android:textSize="17dp"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/activity_signup_confirmPasswordEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordEd"
                android:inputType="textPassword"
                android:textColorHint="@color/colorWhite"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_signup_signupBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/signUp"
        android:background="@drawable/signupbtn_rounded_corner"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/activity_signup_signupLinearLayout"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/activity_signup_returnTologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_signup_signupBtn"
        android:text="@string/returnTologin"
        android:textSize="17dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_orange_light" />

    <CheckBox
        android:id="@+id/activity_signup_chechBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
        android:layout_below="@id/activity_signup_returnTologin"
        android:layout_marginTop="5dp"
        android:checked="true"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:shadowColor="@android:color/holo_orange_light"
        android:theme="@style/MyCheckBoxTheme"/>
</RelativeLayout>