<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.OrderActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:padding="10dp"
                android:text="@string/mallName"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorOrange"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/mallStallTitle"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="220dp"
                    android:padding="10dp"
                    android:text="@string/qty"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:text="$122.50"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/activty_order_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorlightGray"
                android:padding="10dp">

                <TextView
                    android:id="@+id/activity_order_orderTotalTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@id/activity_order_totalTv"
                    android:text="@string/orderTotal"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/activity_order_totalTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="$122.50"
                    android:textColor="@color/colorOrange"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <EditText
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_color_stroke_bg"
                    android:hint="@string/enterPromoCode"
                    android:padding="11dp" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/black_color_strok_redius"
                    android:text="@string/apply" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_order_addmore_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp">

                <TextView
                    style="@style/Hyperlink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addMoreItems"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_order_payTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/activity_order_payTotalTv"
                    android:text="@string/pay"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/activity_order_payTotalTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="$122.50"
                    android:textColor="@color/colorOrange"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/colorlightGray" />

            <RelativeLayout
                android:id="@+id/activity_order_radioGroup_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="13dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PayWithDbs"
                        android:buttonTint="@color/colorOrange"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PayWithposb"
                        android:buttonTint="@color/colorOrange"/>
                </RadioGroup>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp">
                    <ImageView
                        android:id="@+id/activity_order_dosCreditImg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_credit"
                        android:padding="8dp"/>
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_credit"
                        android:padding="8dp"
                        android:layout_below="@id/activity_order_dosCreditImg"/>
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:background="@android:color/black">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orderDetails"
                    android:textColor="@color/colorWhite"
                    android:gravity="center" />
                <Button
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/checkOut"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/signupbtn_rounded_corner"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>