<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/plus_alertCustomLayout_closeImg_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/plus_alertCustomLayout_titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/app_name"/>
        <ImageView
            android:id="@+id/plus_alertCustomLayout_closeImgView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_close"
            android:background="@color/colorlightGray"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/plus_alertCustomLayout_imgView_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:layout_below="@id/plus_alertCustomLayout_closeImg_rl">
        <ImageView
            android:id="@+id/mallStall_customLayout_ImgView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/dominospizza" />

            <TextView
                android:id="@+id/mallStall_customLayout_stallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mallStallTitle"
                android:textSize="15sp"
                android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:id="@+id/plus_alertCustomLayout_cheeseTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cheese"
        android:textSize="18sp"
        android:padding="8dp"
        android:background="@color/colorlightGray"
        android:textAllCaps="true"
        android:layout_below="@id/plus_alertCustomLayout_imgView_ll"/>

    <LinearLayout
        android:id="@+id/plus_alertCustomLayout_radioGrop_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/plus_alertCustomLayout_cheeseTv">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/less"
                android:buttonTint="@color/colorOrange"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:buttonTint="@color/colorOrange"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+$1.20"
                android:gravity="end"
                android:padding="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+$1.20"
                android:gravity="end"
                android:padding="8dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/plus_alertCustomLayout_breadTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bread"
        android:textSize="18sp"
        android:padding="8dp"
        android:background="@color/colorlightGray"
        android:textAllCaps="true"
        android:layout_below="@id/plus_alertCustomLayout_radioGrop_ll"/>

   <RelativeLayout
       android:id="@+id/plus_alertCustomLayout_checkbox_ll"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_below="@id/plus_alertCustomLayout_breadTv">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="10dp">
           <CheckBox
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/garlic"
               android:checked="true"
               android:buttonTint="@color/colorOrange"/>
           <CheckBox
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/jain"
               android:buttonTint="@color/colorOrange"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:orientation="vertical"
           android:padding="10dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="+$1.20"
               android:padding="9dp"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="+$1.20"
               android:padding="4dp"
               android:layout_marginStart="5.5dp"/>
       </LinearLayout>
   </RelativeLayout>
    <View
        android:layout_below="@id/plus_alertCustomLayout_checkbox_ll"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorlightGray" />


    <RelativeLayout
        android:id="@+id/plus_alertCustomLayout_total_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/plus_alertCustomLayout_checkbox_ll">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$65.50"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/plus_alertCustomLayout_total_rl">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_indeterminate"/>
            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="1"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:background="@drawable/gray_color_stroke_bg"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_add_box" />
        </LinearLayout>
        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/signupbtn_rounded_corner"
            android:text="@string/addToOrder"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>
</RelativeLayout>